--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,15 +21,32 @@ body {
 .flexboxitem-a {
   height: 400px;
   width: 400px;
-  background-color:red;
+  background-color: red;
   background: url("../images/drawers.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 .flexboxitem-b {
   height: 400px;
   width: 700px;
-  background-color: green;
+  padding: auto;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.lower {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+img{
+    height:20px;
+    width:20px;
 }
