--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,12 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  height: auto;
+  width: auto;
+  border-radius: 1rem;
   margin-top: 10rem;
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .flexboxitem-a {
@@ -44,12 +49,13 @@ body {
   background: url("../images/drawers.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 1rem 0 0 1rem;
 }
 
 .flexboxitem-b {
   height: 400px;
-  width: 700px;
-  padding: auto;
+  width: 600px;
+  padding: 0 50px 0 50px;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -63,6 +69,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-radius: 0 1rem 1rem 0;
 }
 
 .lower {
@@ -81,8 +88,40 @@ body {
   width: 100%;
 }
 
-img {
-  height: 20px;
-  width: 20px;
+.image .profile {
+  height: 50px;
+  width: 50px;
+  border-radius: 5rem;
+}
+
+#share {
+  height: 30px !important;
+  width: 30px !important;
+}
+
+.account {
+  margin-right: 300px;
+}
+
+#share-panel {
+  position: absolute;
+  margin-top: -85px;
+  background-color: #48556a;
+  height: auto;
+  width: 300px;
+  border-radius: 10px;
+  margin-left: -120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=styles.css.map */
