--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,7 +15,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  height:auto;
+  width:auto;
+  border-radius:1rem;
   margin-top: 10rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .flexboxitem-a {
@@ -25,17 +30,19 @@ body {
   background: url("../images/drawers.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 1rem 0 0 1rem;
 }
 
 .flexboxitem-b {
   height: 400px;
-  width: 700px;
-  padding: auto;
+  width: 600px;
+  padding: 0 50px 0 50px;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  border-radius: 0 1rem 1rem 0;
 }
 
 .lower {
@@ -46,7 +53,32 @@ body {
   width: 100%;
 }
 
-img{
-    height:20px;
-    width:20px;
+.image .profile {
+  height: 50px;
+  width: 50px;
+  border-radius: 5rem;
+}
+
+#share {
+  height: 30px !important;
+  width: 30px !important;
+}
+
+.account {
+  margin-right: 300px;
+}
+
+
+#share-panel{
+  position: absolute;
+  margin-top:-85px;
+  background-color: hsl(217, 19%, 35%);
+  height: auto;
+  width:300px;
+  border-radius:10px;
+  margin-left:-120px;
+  display:flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items:center;
 }
