--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,4 +124,13 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+
+@media (max-width: 1100px) {
+  .flexboxitem-a {
+    border-radius: 10px 10px 0 0;
+  }
+  .flexboxitem-b {
+    font-size: smaller;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
