--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -82,3 +82,13 @@ body {
   justify-content:space-around;
   align-items:center;
 }
+
+@media (max-width:1100px){
+  .flexboxitem-a{
+    border-radius:10px 10px 0 0;
+  }
+
+  .flexboxitem-b{
+    font-size:smaller;
+  }
+}
